--- a/Tree.ipynb
+++ b/Tree.ipynb
@@ -488,11 +488,11 @@
         "max_depth_bfs(root)"
       ],
       "metadata": {
-        "id": "4wxKejd3o9uH",
-        "outputId": "d2caf0f4-0410-4950-ba79-8263d6f39779",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4wxKejd3o9uH",
+        "outputId": "d2caf0f4-0410-4950-ba79-8263d6f39779"
       },
       "execution_count": 9,
       "outputs": [
@@ -553,11 +553,11 @@
         "is_symmetric_bfs(root)"
       ],
       "metadata": {
-        "id": "xrmELus5p2RW",
-        "outputId": "e8f20e7e-9a43-417a-e596-aa532e8c2eb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xrmELus5p2RW",
+        "outputId": "e8f20e7e-9a43-417a-e596-aa532e8c2eb5"
       },
       "execution_count": 11,
       "outputs": [
@@ -635,11 +635,11 @@
         "print_tree_level_order(root)"
       ],
       "metadata": {
-        "id": "JhmiSw2qqHop",
-        "outputId": "8f6393ed-e9cc-48b4-ddb1-c5e7c6fc2012",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JhmiSw2qqHop",
+        "outputId": "8f6393ed-e9cc-48b4-ddb1-c5e7c6fc2012"
       },
       "execution_count": 23,
       "outputs": [
@@ -661,6 +661,71 @@
             "[8, 9, 10, 11, 12, 13, 14, 15]\n",
             "[None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Subset Target**"
+      ],
+      "metadata": {
+        "id": "4oKn0VG2veGb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def target_subset(nums, target):\n",
+        "\n",
+        "  result = []\n",
+        "  n = len(nums)\n",
+        "\n",
+        "  def backtrack(i, sum, path):\n",
+        "    if i == n:\n",
+        "      if sum == target:\n",
+        "        result.append(path[:])\n",
+        "      return\n",
+        "\n",
+        "    path.append(nums[i])\n",
+        "    backtrack(i + 1, sum + nums[i], path)\n",
+        "    path.pop()\n",
+        "\n",
+        "    backtrack(i+1, sum, path)\n",
+        "\n",
+        "  backtrack(0, 0, [])\n",
+        "  return result"
+      ],
+      "metadata": {
+        "id": "qX-sN8xFvjve"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "set_ = [1, 2, 5, 3, 4, 6, 8]\n",
+        "target_subset(set_, 10)"
+      ],
+      "metadata": {
+        "id": "6zQq-FZcxsST",
+        "outputId": "20a1c341-231b-4cd8-bf26-f870e773b9a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1, 2, 3, 4], [1, 5, 4], [1, 3, 6], [2, 5, 3], [2, 8], [4, 6]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     }
