--- a/Tree.ipynb
+++ b/Tree.ipynb
@@ -709,13 +709,13 @@
         "target_subset(set_, 10)"
       ],
       "metadata": {
-        "id": "6zQq-FZcxsST",
-        "outputId": "20a1c341-231b-4cd8-bf26-f870e773b9a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6zQq-FZcxsST",
+        "outputId": "040663f5-d77e-46bf-aa7c-d7e9fa411541"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -725,7 +725,96 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Two Element Subset Target**"
+      ],
+      "metadata": {
+        "id": "QqoYEilXzgxJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "two_element_subsets = [c for c in target_subset(set_, 10) if len(c) == 2]\n",
+        "two_element_subsets"
+      ],
+      "metadata": {
+        "id": "x8oi_ogczTJz",
+        "outputId": "d02ba0db-9634-4f0f-be5a-fefb24de1c0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[2, 8], [4, 6]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Print Pairs Using Queue In List**"
+      ],
+      "metadata": {
+        "id": "zDIIGCef0JET"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import deque\n",
+        "\n",
+        "nums = [1, 2, 3, 4]\n",
+        "\n",
+        "queue = deque([[]])\n",
+        "pairs = []\n",
+        "\n",
+        "while queue:\n",
+        "    subset = queue.popleft()\n",
+        "\n",
+        "    # If Subset Has 2 Elements, It's Pair\n",
+        "    if len(subset) == 2:\n",
+        "        pairs.append(subset)\n",
+        "        continue\n",
+        "\n",
+        "    # If Subset Is Smaller Than 2, Add Next Elements\n",
+        "    start = nums.index(subset[-1]) + 1 if subset else 0\n",
+        "    for i in range(start, len(nums)):\n",
+        "        new_subset = subset + [nums[i]]\n",
+        "        queue.append(new_subset)\n",
+        "\n",
+        "print(pairs)"
+      ],
+      "metadata": {
+        "id": "xk-NfQo-0KcE",
+        "outputId": "e806afef-7cdd-4b5d-a642-54aeca6acff3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2], [1, 3], [1, 4], [2, 3], [2, 4], [3, 4]]\n"
+          ]
         }
       ]
     }
