--- a/IMDB_DataClassification_BERT_HF_Train_Push_Inference.ipynb
+++ b/IMDB_DataClassification_BERT_HF_Train_Push_Inference.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyORi4/77Lv9Amtuuy4TJQFf",
+      "authorship_tag": "ABX9TyOXGiaAwcxrOlE4lmbrjCQ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9040,6 +9040,203 @@
             "Text: I loved this movie! --> Sentiment: Positive\n",
             "Text: This was a terrible film. --> Sentiment: Negative\n",
             "Text: I hate you. --> Sentiment: Negative\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install transformers onnx onnxruntime onnxruntime-tools"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nhPG6zP18zbC",
+        "outputId": "943fd505-65d3-435d-de82-2f03a2768c7f"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed coloredlogs-15.0.1 humanfriendly-10.0 onnx-1.20.0 onnxruntime-1.23.2 onnxruntime-tools-1.7.0 py3nvml-0.2.7 xmltodict-1.0.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install optimum[onnxruntime]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "id": "bA9eLkDz9KMt",
+        "outputId": "6908c136-3cad-4078-d4e0-868b7ad2f39a"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed optimum-2.0.0 optimum-onnx-0.0.3 tokenizers-0.21.4 transformers-4.55.4\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "tokenizers",
+                  "transformers"
+                ]
+              },
+              "id": "3a60ab36c04241d692395989742b50ef"
+            }
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from optimum.onnxruntime import ORTModelForSequenceClassification\n",
+        "from transformers import AutoTokenizer\n",
+        "from pathlib import Path\n",
+        "\n",
+        "model_name = \"omkarwazulkar/my-model-name\"\n",
+        "save_path = Path(\"onnx_model\")\n",
+        "\n",
+        "# 1. Load tokenizer\n",
+        "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+        "\n",
+        "# 2. Export ONNX model (new API!)\n",
+        "onnx_model = ORTModelForSequenceClassification.from_pretrained(\n",
+        "    model_name,\n",
+        "    export=True  # <-- Export ONNX\n",
+        ")\n",
+        "\n",
+        "# 3. Save model + tokenizer\n",
+        "onnx_model.save_pretrained(save_path)\n",
+        "tokenizer.save_pretrained(save_path)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9x77eAzl90b3",
+        "outputId": "3b67f6e7-85ff-45af-f633-27b75950510b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('onnx_model/tokenizer_config.json',\n",
+              " 'onnx_model/special_tokens_map.json',\n",
+              " 'onnx_model/vocab.txt',\n",
+              " 'onnx_model/added_tokens.json',\n",
+              " 'onnx_model/tokenizer.json')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import onnxruntime as ort\n",
+        "from transformers import AutoTokenizer\n",
+        "import numpy as np\n",
+        "\n",
+        "onnx_folder = \"onnx_model\"   # the folder you saved earlier\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(onnx_folder)\n",
+        "\n",
+        "session = ort.InferenceSession(f\"{onnx_folder}/model.onnx\")"
+      ],
+      "metadata": {
+        "id": "o1M9QwgQ-BtM"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def predict(text):\n",
+        "    # Tokenize\n",
+        "    inputs = tokenizer(\n",
+        "        text,\n",
+        "        return_tensors=\"np\",  # numpy tensors for ONNXRuntime\n",
+        "        padding=True,\n",
+        "        truncation=True,\n",
+        "        max_length=256\n",
+        "    )\n",
+        "\n",
+        "    # ONNX model inference\n",
+        "    outputs = session.run(\n",
+        "        None,\n",
+        "        {\n",
+        "            \"input_ids\": inputs[\"input_ids\"],\n",
+        "            \"attention_mask\": inputs[\"attention_mask\"]\n",
+        "        }\n",
+        "    )\n",
+        "\n",
+        "    logits = outputs[0]\n",
+        "    pred_id = int(np.argmax(logits, axis=1)[0])\n",
+        "    return pred_id, logits"
+      ],
+      "metadata": {
+        "id": "ySDVa72P-D22"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id2label = {0: \"Negative\", 1: \"Positive\"}"
+      ],
+      "metadata": {
+        "id": "isXEPjUz-Fww"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = \"I really hate this movie!\"\n",
+        "pred_id, _ = predict(text)\n",
+        "print(\"Prediction:\", id2label[pred_id])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wUGuwFax-JIW",
+        "outputId": "bd6512e3-bc86-4250-b67f-0d23d929b805"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prediction: Negative\n"
           ]
         }
       ]
