--- a/IMDB_DataClassification_BERT_HF_Train_Push_Inference.ipynb
+++ b/IMDB_DataClassification_BERT_HF_Train_Push_Inference.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOXGiaAwcxrOlE4lmbrjCQ5",
+      "authorship_tag": "ABX9TyNEekiyVkoaCQAF9x8tHgq+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9237,6 +9237,146 @@
           "name": "stdout",
           "text": [
             "Prediction: Negative\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def predict_batch(texts):\n",
+        "    inputs = tokenizer(\n",
+        "        texts,\n",
+        "        return_tensors=\"np\",\n",
+        "        padding=True,\n",
+        "        truncation=True,\n",
+        "        max_length=256\n",
+        "    )\n",
+        "\n",
+        "    outputs = session.run(\n",
+        "        None,\n",
+        "        {\n",
+        "            \"input_ids\": inputs[\"input_ids\"],\n",
+        "            \"attention_mask\": inputs[\"attention_mask\"]\n",
+        "        }\n",
+        "    )\n",
+        "\n",
+        "    logits = outputs[0]     # ONNX output #1\n",
+        "    preds = np.argmax(logits, axis=1)\n",
+        "    return preds, logits"
+      ],
+      "metadata": {
+        "id": "qRIX870w-X1z"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "texts = [\n",
+        "    \"I loved this movie!\",\n",
+        "    \"This was awful.\",\n",
+        "    \"Amazing storyline and acting.\",\n",
+        "    \"I hate everything about this.\",\n",
+        "    \"What a beautiful film!\",\n",
+        "    \"Terrible direction.\",\n",
+        "    \"Absolutely fantastic experience!\",\n",
+        "    \"Super boring.\",\n",
+        "    \"One of the best movies ever.\",\n",
+        "    \"I will never watch this again.\",\n",
+        "    \"Loved every moment of it.\",\n",
+        "    \"Waste of time.\",\n",
+        "    \"Great visuals and music.\",\n",
+        "    \"The plot was predictable.\",\n",
+        "    \"Outstanding performance!\"\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "4jnc0AA--qA3"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id2label = {0: \"Negative\", 1: \"Positive\"}"
+      ],
+      "metadata": {
+        "id": "WUmsVHWE-yVy"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pred_ids, logits = predict_batch(texts)\n",
+        "\n",
+        "for text, pred in zip(texts, pred_ids):\n",
+        "    print(f\"Text: {text}\\nPrediction: {id2label[pred]}\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Li_KGnU1-sAs",
+        "outputId": "70f9fa96-7545-485a-9111-5ef130b41a50"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Text: I loved this movie!\n",
+            "Prediction: Positive\n",
+            "\n",
+            "Text: This was awful.\n",
+            "Prediction: Negative\n",
+            "\n",
+            "Text: Amazing storyline and acting.\n",
+            "Prediction: Positive\n",
+            "\n",
+            "Text: I hate everything about this.\n",
+            "Prediction: Negative\n",
+            "\n",
+            "Text: What a beautiful film!\n",
+            "Prediction: Positive\n",
+            "\n",
+            "Text: Terrible direction.\n",
+            "Prediction: Negative\n",
+            "\n",
+            "Text: Absolutely fantastic experience!\n",
+            "Prediction: Positive\n",
+            "\n",
+            "Text: Super boring.\n",
+            "Prediction: Negative\n",
+            "\n",
+            "Text: One of the best movies ever.\n",
+            "Prediction: Positive\n",
+            "\n",
+            "Text: I will never watch this again.\n",
+            "Prediction: Negative\n",
+            "\n",
+            "Text: Loved every moment of it.\n",
+            "Prediction: Positive\n",
+            "\n",
+            "Text: Waste of time.\n",
+            "Prediction: Negative\n",
+            "\n",
+            "Text: Great visuals and music.\n",
+            "Prediction: Positive\n",
+            "\n",
+            "Text: The plot was predictable.\n",
+            "Prediction: Negative\n",
+            "\n",
+            "Text: Outstanding performance!\n",
+            "Prediction: Positive\n",
+            "\n"
           ]
         }
       ]
