--- a/H4NoRobots_FineTune_Llama3_1B_LoRA.ipynb
+++ b/H4NoRobots_FineTune_Llama3_1B_LoRA.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/omkarwazulkar/GoogleColab/blob/main/H4NoRobots_FineTune_Llama3_1B_LoRA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## **Reqs**"
-      ],
       "metadata": {
         "id": "3CBzNuEcdQOV"
-      }
+      },
+      "source": [
+        "## **Reqs**"
+      ]
     },
     {
       "cell_type": "code",
@@ -41,64 +41,69 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!hf auth login"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "b-4pOo11RWoG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!hf auth login"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from datasets import load_dataset\n",
-        "from transformers import AutoTokenizer"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "_RiBSAgZafXl"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from datasets import load_dataset\n",
+        "from transformers import AutoTokenizer"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "system_message = \"\"\"You are Llama, an AI assistant created by Omkar to be helpful and honest. Your knowledge spans a wide range of topics, allowing you to engage in substantive conversations and provide analysis on complex subjects.\"\"\""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Dy9csO2iagd4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "system_message = \"\"\"You are Llama, an AI assistant created by Omkar to be helpful and honest. Your knowledge spans a wide range of topics, allowing you to engage in substantive conversations and provide analysis on complex subjects.\"\"\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset = load_dataset(\"HuggingFaceH4/no_robots\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "5tdVrRDdah73"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "dataset = load_dataset(\"HuggingFaceH4/no_robots\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PfC_qC1Baji2"
+      },
+      "outputs": [],
       "source": [
         "columns_to_remove = [\n",
         "    c for c in dataset[\"train\"].column_names if c != \"messages\"\n",
         "]"
-      ],
-      "metadata": {
-        "id": "PfC_qC1Baji2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "M3QLtRjPak55"
+      },
+      "outputs": [],
       "source": [
         "def create_conversation(sample):\n",
         "    if sample[\"messages\"][0][\"role\"] == \"system\":\n",
@@ -108,29 +113,29 @@
         "            \"messages\": [{\"role\": \"system\", \"content\": system_message}]\n",
         "            + sample[\"messages\"]\n",
         "        }"
-      ],
-      "metadata": {
-        "id": "M3QLtRjPak55"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MbYDWlo9amK3"
+      },
+      "outputs": [],
       "source": [
         "dataset = dataset.map(\n",
         "    create_conversation,\n",
         "    remove_columns=columns_to_remove,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "MbYDWlo9amK3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "iy-LedZ4anN5"
+      },
+      "outputs": [],
       "source": [
         "dataset[\"train\"] = dataset[\"train\"].filter(\n",
         "    lambda x: len(x[\"messages\"][1:]) % 2 == 0\n",
@@ -138,27 +143,27 @@
         "dataset[\"test\"] = dataset[\"test\"].filter(\n",
         "    lambda x: len(x[\"messages\"][1:]) % 2 == 0\n",
         ")"
-      ],
-      "metadata": {
-        "id": "iy-LedZ4anN5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_dataset = dataset[\"train\"]\n",
-        "test_dataset = dataset[\"test\"]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9xekn8cAaoXn"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train_dataset = dataset[\"train\"]\n",
+        "test_dataset = dataset[\"test\"]"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aj2J7ATxarwP"
+      },
+      "outputs": [],
       "source": [
         "LLAMA_3_CHAT_TEMPLATE = (\n",
         "    \"{% for message in messages %}\"\n",
@@ -171,15 +176,15 @@
         "    \"{% endif %}\"\n",
         "    \"{% endfor %}\"\n",
         ")"
-      ],
-      "metadata": {
-        "id": "aj2J7ATxarwP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8CzneGBGat5Y"
+      },
+      "outputs": [],
       "source": [
         "tokenizer = AutoTokenizer.from_pretrained(\n",
         "    \"meta-llama/Llama-3.2-1B\",\n",
@@ -187,15 +192,15 @@
         ")\n",
         "tokenizer.pad_token = tokenizer.eos_token\n",
         "tokenizer.chat_template = LLAMA_3_CHAT_TEMPLATE"
-      ],
-      "metadata": {
-        "id": "8CzneGBGat5Y"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Fc3afnMfa4Cz"
+      },
+      "outputs": [],
       "source": [
         "def template_dataset(example):\n",
         "    return {\n",
@@ -205,12 +210,7 @@
         "            add_generation_prompt=False,\n",
         "        )\n",
         "    }"
-      ],
-      "metadata": {
-        "id": "Fc3afnMfa4Cz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -511,12 +511,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## **Push LoRA to HF**"
-      ],
       "metadata": {
         "id": "2j_iYXmMcjAR"
-      }
+      },
+      "source": [
+        "## **Push LoRA to HF**"
+      ]
     },
     {
       "cell_type": "code",
@@ -526,7 +526,7 @@
       },
       "outputs": [],
       "source": [
-        "hf_repo = \"omkarwazulkar/Llama-3.2-1B-LoRA-HuggingFaceH4_50\""
+        "hf_repo = \"omkarwazulkar/Llama-3.2-1B-LoRA-HuggingFaceH4\""
       ]
     },
     {
@@ -543,43 +543,48 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## **Inference LoRA Adapter**"
-      ],
       "metadata": {
         "id": "ASdL-yvzdEX8"
-      }
+      },
+      "source": [
+        "## **Inference LoRA Adapter**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "sMuqtAR5ZZ-h"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
         "from peft import PeftModel"
-      ],
-      "metadata": {
-        "id": "sMuqtAR5ZZ-h"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model_id = \"meta-llama/Llama-3.2-1B\"\n",
-        "lora_path = \"omkarwazulkar/Llama-3.2-1B-LoRA-HuggingFaceH4_50\"\n",
-        "\n",
-        "tokenizer = AutoTokenizer.from_pretrained(lora_path, use_fast=True)\n",
-        "tokenizer.pad_token = tokenizer.eos_token"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "M2trrnYmWIZx"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model_id = \"meta-llama/Llama-3.2-1B\"\n",
+        "lora_path = \"omkarwazulkar/Llama-3.2-1B-LoRA-HuggingFaceH4\"\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(lora_path, use_fast=True)\n",
+        "tokenizer.pad_token = tokenizer.eos_token"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6s8dR-YFW0H6"
+      },
+      "outputs": [],
       "source": [
         "base_model = AutoModelForCausalLM.from_pretrained(\n",
         "    model_id,\n",
@@ -593,15 +598,15 @@
         ")\n",
         "\n",
         "model.eval()"
-      ],
-      "metadata": {
-        "id": "6s8dR-YFW0H6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BiHzNL1TWoiw"
+      },
+      "outputs": [],
       "source": [
         "messages = [\n",
         "    {\n",
@@ -613,41 +618,41 @@
         "        \"content\": \"Explain gradient checkpointing in simple terms.\"\n",
         "    }\n",
         "]"
-      ],
-      "metadata": {
-        "id": "BiHzNL1TWoiw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JfXj6J_9Wr2T"
+      },
+      "outputs": [],
       "source": [
         "prompt = tokenizer.apply_chat_template(\n",
         "    messages,\n",
         "    tokenize=False,\n",
         "    add_generation_prompt=True,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "JfXj6J_9Wr2T"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "prompt"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "iLCLQXQIXLr-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "prompt"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GkYBgBTxXHTj"
+      },
+      "outputs": [],
       "source": [
         "inputs = tokenizer(\n",
         "    prompt,\n",
@@ -672,21 +677,16 @@
         ")\n",
         "\n",
         "print(response)"
-      ],
-      "metadata": {
-        "id": "GkYBgBTxXHTj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## **Push Merged to HF**"
-      ],
       "metadata": {
         "id": "TvAG4taccsXQ"
-      }
+      },
+      "source": [
+        "## **Push Merged to HF**"
+      ]
     },
     {
       "cell_type": "code",
@@ -701,8 +701,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wJvXZXqlX8j_"
+      },
+      "outputs": [],
       "source": [
-        "repo_id = \"omkarwazulkar/Merged-Llama-3.2-1B-LoRA-HuggingFaceH4_50\"\n",
+        "repo_id = \"omkarwazulkar/Merged-Llama-3.2-1B-LoRA-HuggingFaceH4\"\n",
         "\n",
         "merged.push_to_hub(\n",
         "    repo_id,\n",
@@ -712,47 +717,47 @@
         "tokenizer.push_to_hub(\n",
         "    repo_id,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "wJvXZXqlX8j_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## **Inference**"
-      ],
       "metadata": {
         "id": "xsiLM8B0c0wY"
-      }
+      },
+      "source": [
+        "## **Inference**"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import torch\n",
-        "from transformers import AutoTokenizer, AutoModelForCausalLM"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "AHnWEU2oc8U-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "from transformers import AutoTokenizer, AutoModelForCausalLM"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "repo_id = \"omkarwazulkar/Merged-Llama-3.2-1B-LoRA-HuggingFaceH4_50\""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dYMeoG82ZDQP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "repo_id = \"omkarwazulkar/Merged-Llama-3.2-1B-LoRA-HuggingFaceH4\""
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Ox4p3OenZID_"
+      },
+      "outputs": [],
       "source": [
         "tokenizer = AutoTokenizer.from_pretrained(repo_id, use_fast=True)\n",
         "model = AutoModelForCausalLM.from_pretrained(\n",
@@ -761,15 +766,15 @@
         "    device_map=\"auto\",\n",
         ")\n",
         "tokenizer.pad_token = tokenizer.eos_token"
-      ],
-      "metadata": {
-        "id": "Ox4p3OenZID_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lO6UdjCvbpeL"
+      },
+      "outputs": [],
       "source": [
         "messages = [\n",
         "    {\n",
@@ -781,41 +786,41 @@
         "        \"content\": \"Explain gradient checkpointing in simple terms.\"\n",
         "    }\n",
         "]"
-      ],
-      "metadata": {
-        "id": "lO6UdjCvbpeL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uNeTNyhybuDG"
+      },
+      "outputs": [],
       "source": [
         "prompt = tokenizer.apply_chat_template(\n",
         "    messages,\n",
         "    tokenize=False,\n",
         "    add_generation_prompt=True,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "uNeTNyhybuDG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "prompt"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ocqJtsmWbwTS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "prompt"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XF3YGrT3bxoa"
+      },
+      "outputs": [],
       "source": [
         "inputs = tokenizer(\n",
         "    prompt,\n",
@@ -840,20 +845,15 @@
         ")\n",
         "\n",
         "print(response)"
-      ],
-      "metadata": {
-        "id": "XF3YGrT3bxoa"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
